--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: cjvogel1972/kube-dashboard
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.0.1"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -16,12 +16,12 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: false
+  create: true
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  name: "kube-dash-sa"
 
 podAnnotations: {}
 
@@ -41,13 +41,14 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: kube-dashboard.cf.toddelewis.net
+      paths:
+        -
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
