--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: cjvogel1972/kube-dashboard
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "0.0.1"
 
 imagePullSecrets: []
 nameOverride: ""
